force-app/main/default/objects/WorkOrder/fields/A_Clausula13__c.field-meta.xml
<CustomField>
    <fullName>A_Clausula13__c</fullName>
    <label>A_Clausula13</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>