force-app/main/default/objects/WorkOrder/fields/A_ClausulaEditada10__c.field-meta.xml
<CustomField>
    <fullName>A_ClausulaEditada10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A_ClausulaEditada10</label>
    <type>Checkbox</type>
</CustomField>