force-app/main/default/objects/WorkOrder/fields/A_ClausulaEditada11__c.field-meta.xml
<CustomField>
    <fullName>A_ClausulaEditada11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A_ClausulaEditada11</label>
    <type>Checkbox</type>
</CustomField>