force-app/main/default/objects/WorkOrder/fields/A_ClausulaEditada12__c.field-meta.xml
<CustomField>
    <fullName>A_ClausulaEditada12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A_ClausulaEditada12</label>
    <type>Checkbox</type>
</CustomField>