force-app/main/default/objects/WorkOrder/fields/Acess_rios__c.field-meta.xml
<CustomField>
    <fullName>Acess_rios__c</fullName>
    <formula>IF(  Case.ContratodeServico__r.Acess_rios__c =true,IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815oV&quot;, &quot;&quot; , 15, 15), IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815of&quot;, &quot;&quot; , 15, 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acessórios</label>
    <type>Text</type>
</CustomField>