force-app/main/default/objects/WorkOrder/fields/Acess_rios_que_Acompanham_o_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Acess_rios_que_Acompanham_o_Equipamento__c</fullName>
    <label>Itens que Acompanham o Equipamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>