force-app/main/default/objects/WorkOrder/fields/Ag_Atend_a_An_Concluida__c.field-meta.xml
<CustomField>
    <fullName>Ag_Atend_a_An_Concluida__c</fullName>
    <formula>Inicio_Analise_Concluida__c -  Inicio_Aguardando_Atendimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ag Atend. a An. Concluida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>