force-app/main/default/objects/WorkOrder/fields/analiseConcluida__c.field-meta.xml
<CustomField>
    <fullName>analiseConcluida__c</fullName>
    <label>Análise Concluída em</label>
    <type>DateTime</type>
</CustomField>