force-app/main/default/objects/WorkOrder/fields/Assinante2__c.field-meta.xml
<CustomField>
    <fullName>Assinante2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2º Assinante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (2º Assinante)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho3</relationshipName>
    <type>Lookup</type>
</CustomField>