force-app/main/default/objects/WorkOrder/fields/Assinante2PreAutorizacao__c.field-meta.xml
<CustomField>
    <fullName>Assinante2PreAutorizacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2º Assinante Pré-Autorização</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (2º Assinante Pré-Autorização)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho8</relationshipName>
    <type>Lookup</type>
</CustomField>