force-app/main/default/objects/WorkOrder/fields/assinaturaTermino__c.field-meta.xml
<CustomField>
    <fullName>assinaturaTermino__c</fullName>
    <label>assinaturaTermino</label>
    <type>Url</type>
</CustomField>