force-app/main/default/objects/WorkOrder/fields/Auditado__c.field-meta.xml
<CustomField>
    <fullName>Auditado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auditado</label>
    <type>Checkbox</type>
</CustomField>