force-app/main/default/objects/WorkOrder/fields/Avaliacao_Tecnica_Nao_Aplicavel__c.field-meta.xml
<CustomField>
    <fullName>Avaliacao_Tecnica_Nao_Aplicavel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avaliação Técnica Não Aplicável</label>
    <type>Checkbox</type>
</CustomField>