force-app/main/default/objects/WorkOrder/fields/booleano_garantia_de_fabrica__c.field-meta.xml
<CustomField>
    <fullName>booleano_garantia_de_fabrica__c</fullName>
    <formula>IF(ISPICKVAL(Categoria__c, &quot;GARANTIA DE FÁBRICA&quot;),&quot;G. Fábrica&quot;,&quot;Outras&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>booleano garantia de fabrica</label>
    <type>Text</type>
</CustomField>