force-app/main/default/objects/WorkOrder/fields/booleano_garantia_servico__c.field-meta.xml
<CustomField>
    <fullName>booleano_garantia_servico__c</fullName>
    <formula>IF(ISPICKVAL(Categoria__c, &quot;GARANTIA DE SERVIÇO&quot;),&quot;G. Serviço&quot;,&quot;Outras&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>booleano garantia servico</label>
    <type>Text</type>
</CustomField>