force-app/main/default/objects/WorkOrder/fields/Calibra_o__c.field-meta.xml
<CustomField>
    <fullName>Calibra_o__c</fullName>
    <formula>IF( Case.ContratodeServico__r.Calibra_o__c =true ,IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815oV&quot;, &quot;&quot; , 15, 15), IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815of&quot;, &quot;&quot; , 15, 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calibração</label>
    <type>Text</type>
</CustomField>