force-app/main/default/objects/WorkOrder/fields/Calibra_o_Realizada__c.field-meta.xml
<CustomField>
    <fullName>Calibra_o_Realizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calibração Realizada?</label>
    <type>Checkbox</type>
</CustomField>