force-app/main/default/objects/WorkOrder/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVULSO</fullName>
            </value>
            <value>
                <fullName>CONTRATO DE LOCAÇÃO</fullName>
                <default>true</default>
                <label>CONTRATO DE LOCAÇÃO</label>
            </value>
            <value>
                <fullName>CONTRATO DE SERVIÇO</fullName>
            </value>
            <value>
                <fullName>GARANTIA DE FABRICA</fullName>
            </value>
            <value>
                <fullName>GARANTIA DE FÁBRICA</fullName>
            </value>
            <value>
                <fullName>GARANTIA DE SERVIÇO</fullName>
            </value>
            <value>
                <fullName>INSTALAÇÃO</fullName>
            </value>
            <value>
                <fullName>COMODATO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>