force-app/main/default/objects/WorkOrder/fields/Celular__c.field-meta.xml
<CustomField>
    <fullName>Celular__c</fullName>
    <formula>Contact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celular</label>
    <type>Text</type>
</CustomField>