force-app/main/default/objects/WorkOrder/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <formula>IF(
    Account.CNPJ__c &lt;&gt; &quot;&quot;, 
    Account.CNPJ__c, 
    IF(
        Account.CPF__pc &lt;&gt; &quot;&quot;, 
        Account.CPF__pc, 
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ/CPF</label>
    <type>Text</type>
</CustomField>