force-app/main/default/objects/WorkOrder/fields/Conta_da_OT__c.field-meta.xml
<CustomField>
    <fullName>Conta_da_OT__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta da OT</label>
    <type>Text</type>
</CustomField>