force-app/main/default/objects/WorkOrder/fields/Conta_do_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Conta_do_Ativo__c</fullName>
    <formula>Asset.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta do Ativo</label>
    <type>Text</type>
</CustomField>