force-app/main/default/objects/WorkOrder/fields/Conta_e_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Conta_e_CNPJ__c</fullName>
    <formula>Account.Raz_o_Social__c + &apos;. CNPJ: &apos; +  Account.CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta e CNPJ</label>
    <type>Text</type>
</CustomField>