force-app/main/default/objects/WorkOrder/fields/Contagem_de_Itens_de_Cota_o__c.field-meta.xml
<CustomField>
    <fullName>Contagem_de_Itens_de_Cota_o__c</fullName>
    <label>Contagem de Itens de Cotação</label>
    <summaryForeignKey>Item_Para_Cota_o__c.Ordem_de_trabalho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>