force-app/main/default/objects/WorkOrder/fields/Contagem_de_Itens_de_Linha__c.field-meta.xml
<CustomField>
    <fullName>Contagem_de_Itens_de_Linha__c</fullName>
    <label>Contagem de Itens de Linha</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>