force-app/main/default/objects/WorkOrder/fields/Contrato_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servi_o__c</fullName>
    <formula>Case.ContratodeServico__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrato de Serviço</label>
    <type>Text</type>
</CustomField>