force-app/main/default/objects/WorkOrder/fields/Contrato_de_Servi_o_Relacionado_v2__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servi_o_Relacionado_v2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Serviço Relacionado v2</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>