force-app/main/default/objects/WorkOrder/fields/Controle_7_dias__c.field-meta.xml
<CustomField>
    <fullName>Controle_7_dias__c</fullName>
    <label>Controle 7 dias</label>
    <type>Date</type>
</CustomField>