force-app/main/default/objects/WorkOrder/fields/Controle_de_Itens_Demo_Trein__c.field-meta.xml
<CustomField>
    <fullName>Controle_de_Itens_Demo_Trein__c</fullName>
    <label>Controle de Itens Demo/Trein.</label>
    <summarizedField>Itens_para_Demonstra_o_Treinamento__c.Controle__c</summarizedField>
    <summaryForeignKey>Itens_para_Demonstra_o_Treinamento__c.Ordem_de_trabalho__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>