force-app/main/default/objects/WorkOrder/fields/Controle_Participantes__c.field-meta.xml
<CustomField>
    <fullName>Controle_Participantes__c</fullName>
    <label>Controle Participantes</label>
    <summarizedField>Participante__c.Controle__c</summarizedField>
    <summaryForeignKey>Participante__c.Ordem_de_trabalho_Relacionada__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>