force-app/main/default/objects/WorkOrder/fields/Data_Agendada_para_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Data_Agendada_para_Servi_o__c</fullName>
    <label>Data Agendada para Serviço</label>
    <type>DateTime</type>
</CustomField>