force-app/main/default/objects/WorkOrder/fields/Data_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Data_Auditoria__c</fullName>
    <label>Data Auditoria</label>
    <type>Date</type>
</CustomField>