force-app/main/default/objects/WorkOrder/fields/Data_da_Alteracao_de_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Alteracao_de_Status__c</fullName>
    <label>Data da Alteração de Status</label>
    <type>DateTime</type>
</CustomField>