force-app/main/default/objects/WorkOrder/fields/Data_da_primeira_parcela__c.field-meta.xml
<CustomField>
    <fullName>Data_da_primeira_parcela__c</fullName>
    <label>Data da primeira parcela</label>
    <type>Date</type>
</CustomField>