force-app/main/default/objects/WorkOrder/fields/Data_de_emissao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_emissao__c</fullName>
    <label>Data de emissao</label>
    <type>Date</type>
</CustomField>