force-app/main/default/objects/WorkOrder/fields/Data_de_validade__c.field-meta.xml
<CustomField>
    <fullName>Data_de_validade__c</fullName>
    <label>Data de validade</label>
    <type>Date</type>
</CustomField>