force-app/main/default/objects/WorkOrder/fields/Data_de_Vencimento_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Vencimento_do_Contrato__c</fullName>
    <formula>Case.ContratodeServico__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Vencimento do Contrato</label>
    <type>Date</type>
</CustomField>