force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_da_Avalia_o_T_cnica_I__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Avalia_o_T_cnica_I__c</fullName>
    <label>Data/Hora Avaliação Técnica (I)</label>
    <type>DateTime</type>
</CustomField>