force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_da_Higienizacao_T__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Higienizacao_T__c</fullName>
    <label>Data/Hora Higienização (T)</label>
    <type>DateTime</type>
</CustomField>