force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_da_Instala_o_I__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Instala_o_I__c</fullName>
    <label>Data/Hora Instalação (I)</label>
    <type>DateTime</type>
</CustomField>