force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_da_Manuten_o_Pt2_I__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Manuten_o_Pt2_I__c</fullName>
    <description>OPCIONAL 
Somente para tarefas fragmentados.</description>
    <inlineHelpText>OPCIONAL 
Somente para tarefas fragmentados.</inlineHelpText>
    <label>Data/Hora Manutenção Pt2 (I)</label>
    <type>DateTime</type>
</CustomField>