force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_da_Manuten_o_Pt2_T__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Manuten_o_Pt2_T__c</fullName>
    <label>Data/Hora Manutenção Pt2 (T)</label>
    <type>DateTime</type>
</CustomField>