force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_da_Qualifica_o_T__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_da_Qualifica_o_T__c</fullName>
    <label>Data/Hora Qualificação (T)</label>
    <type>DateTime</type>
</CustomField>