force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_do_Runin_I__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_do_Runin_I__c</fullName>
    <label>Data/Hora Run-in 1 (I)</label>
    <type>DateTime</type>
</CustomField>