force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_do_Servi_o_I__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_do_Servi_o_I__c</fullName>
    <label>Data/Hora Serviço (I)</label>
    <type>DateTime</type>
</CustomField>