force-app/main/default/objects/WorkOrder/fields/Data_e_Hora_orcamento__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_orcamento__c</fullName>
    <label>Data e Hora do Orçamento</label>
    <type>DateTime</type>
</CustomField>