force-app/main/default/objects/WorkOrder/fields/Data_Email__c.field-meta.xml
<CustomField>
    <fullName>Data_Email__c</fullName>
    <description>Data de controle de fluxo de tempo</description>
    <label>Data Email</label>
    <type>DateTime</type>
</CustomField>