force-app/main/default/objects/WorkOrder/fields/Data_Entrada_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Entrada_Equipamento__c</fullName>
    <description>Data de Entrada do equipamento.</description>
    <inlineHelpText>Data de Entrada do equipamento.</inlineHelpText>
    <label>Data Entrada Equipamento</label>
    <type>Date</type>
</CustomField>