force-app/main/default/objects/WorkOrder/fields/Data_Hora_da_Avalia_o_T_cnica_Pt2__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_da_Avalia_o_T_cnica_Pt2__c</fullName>
    <description>OPCIONAL 
Somente para tarefas fragmentados.</description>
    <inlineHelpText>OPCIONAL 
Somente para tarefas fragmentados.</inlineHelpText>
    <label>Data/Hora Avaliação Técnica Pt2 (I)</label>
    <type>DateTime</type>
</CustomField>