force-app/main/default/objects/WorkOrder/fields/Data_Hora_da_Avalia_o_T_cnica_Pt3_T__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_da_Avalia_o_T_cnica_Pt3_T__c</fullName>
    <label>Data/Hora Avaliação Técnica Pt3 (T)</label>
    <type>DateTime</type>
</CustomField>