force-app/main/default/objects/WorkOrder/fields/Data_Hora_da_Instala_o_Pt2_T__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_da_Instala_o_Pt2_T__c</fullName>
    <label>Data/Hora Instalação Pt2 (T)</label>
    <type>DateTime</type>
</CustomField>