force-app/main/default/objects/WorkOrder/fields/Data_Hora_da_Qualifica_o_Pt3_I__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_da_Qualifica_o_Pt3_I__c</fullName>
    <description>OPCIONAL 
Somente para tarefas fragmentados.</description>
    <inlineHelpText>OPCIONAL 
Somente para tarefas fragmentados.</inlineHelpText>
    <label>Data/Hora Qualificação Pt3 (I)</label>
    <type>DateTime</type>
</CustomField>