force-app/main/default/objects/WorkOrder/fields/Data_Hora_do_Teste_Pt2_T__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_do_Teste_Pt2_T__c</fullName>
    <label>Data/Hora Teste Pt2 (T)</label>
    <type>DateTime</type>
</CustomField>