force-app/main/default/objects/WorkOrder/fields/Data_Pr_ximo_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Data_Pr_ximo_Servi_o__c</fullName>
    <label>Data Próximo Serviço</label>
    <type>Date</type>
</CustomField>