force-app/main/default/objects/WorkOrder/fields/Data_Prevista_para_o_Fim_do_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Data_Prevista_para_o_Fim_do_Servi_o__c</fullName>
    <label>Data Prevista para o Fim do Serviço</label>
    <type>DateTime</type>
</CustomField>