force-app/main/default/objects/WorkOrder/fields/Data_Saida_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Saida_Equipamento__c</fullName>
    <description>Data de Saída do Equipamento.</description>
    <inlineHelpText>Data de Saída do Equipamento.</inlineHelpText>
    <label>Data Saída Equipamento</label>
    <type>Date</type>
</CustomField>