force-app/main/default/objects/WorkOrder/fields/Demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Demonstracao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Comodato</label>
    <referenceTo>Demonstracao__c</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>