force-app/main/default/objects/WorkOrder/fields/Descricao_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Descricao_de_Pagamento__c</fullName>
    <label>Descrição de pagamento (old)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>