force-app/main/default/objects/WorkOrder/fields/Dias_da_Altera_o_de_Status__c.field-meta.xml
<CustomField>
    <fullName>Dias_da_Altera_o_de_Status__c</fullName>
    <formula>NOW() - Data_da_Alteracao_de_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias da Alteração de Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>