force-app/main/default/objects/WorkOrder/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <formula>UPPER(Account.BillingStreet + &quot;, &quot; + Account.BillingCity + &quot;, &quot; + Account.BillingState + &quot;, CEP: &quot; +  Account.BillingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço da conta do Cliente</label>
    <type>Text</type>
</CustomField>