force-app/main/default/objects/WorkOrder/fields/Ensaio_de_Seg_El_trica__c.field-meta.xml
<CustomField>
    <fullName>Ensaio_de_Seg_El_trica__c</fullName>
    <formula>IF(  Case.ContratodeServico__r.Ensaio_de_Seg_El_trica__c =TRUE,IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815oV&quot;, &quot;&quot; , 15, 15), IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815of&quot;, &quot;&quot; , 15, 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ensaio de Seg. Elétrica</label>
    <type>Text</type>
</CustomField>