force-app/main/default/objects/WorkOrder/fields/Envia_Email__c.field-meta.xml
<CustomField>
    <fullName>Envia_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envia Email</label>
    <type>Checkbox</type>
</CustomField>