force-app/main/default/objects/WorkOrder/fields/Equipamento_Pertence_ao__c.field-meta.xml
<CustomField>
    <fullName>Equipamento_Pertence_ao__c</fullName>
    <label>Equipamento Pertence ao:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>