force-app/main/default/objects/WorkOrder/fields/FasePreAutorizacao__c.field-meta.xml
<CustomField>
    <fullName>FasePreAutorizacao__c</fullName>
    <label>Fase da Pré-Autorização</label>
    <length>25</length>
    <type>Text</type>
</CustomField>