force-app/main/default/objects/WorkOrder/fields/Faturado__c.field-meta.xml
<CustomField>
    <fullName>Faturado__c</fullName>
    <formula>IF(
	AND(Total_Estimado__c == 0,Total_Faturado__c==0),
	0,
	(Total_Faturado__c / Total_Estimado__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Faturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>