force-app/main/default/objects/WorkOrder/fields/Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Faturamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faturamento (Representação)</label>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>