force-app/main/default/objects/WorkOrder/fields/Faturamento_Feito2__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Feito2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Faturado por (empresa)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos Feitos (de ordens de trabalho)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>