force-app/main/default/objects/WorkOrder/fields/Faturamento_Feito__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Feito__c</fullName>
    <label>Faturamento Feito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOSPCOM</fullName>
                <default>true</default>
                <label>HOSPCOM</label>
            </value>
            <value>
                <fullName>GDB</fullName>
            </value>
            <value>
                <fullName>HEALTH SOLUTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>