force-app/main/default/objects/WorkOrder/fields/Final_Aguardando_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Final_Aguardando_Atendimento__c</fullName>
    <label>Final Aguardando Atendimento</label>
    <type>DateTime</type>
</CustomField>