force-app/main/default/objects/WorkOrder/fields/Final_Em_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Final_Em_Atendimento__c</fullName>
    <label>Final Em Atendimento</label>
    <type>DateTime</type>
</CustomField>