force-app/main/default/objects/WorkOrder/fields/Forma_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento__c</fullName>
    <label>Forma de pagamento (old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A VISTA NO PEDIDO</fullName>
            </value>
            <value>
                <fullName>A VISTA CONTRA EMBARQUE</fullName>
            </value>
            <value>
                <fullName>FINANCIAMENTO BANCÁRIO</fullName>
            </value>
            <value>
                <fullName>OPEN ACCOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>