force-app/main/default/objects/WorkOrder/fields/Formatar_Produto__c.field-meta.xml
<CustomField>
    <fullName>Formatar_Produto__c</fullName>
    <label>Formatar Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPACTO</fullName>
            </value>
            <value>
                <fullName>ORIGINAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>