force-app/main/default/objects/WorkOrder/fields/Frete2__c.field-meta.xml
<CustomField>
    <fullName>Frete2__c</fullName>
    <label>Tipo de envio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipos_de_envio</valueSetName>
    </valueSet>
</CustomField>