force-app/main/default/objects/WorkOrder/fields/Frete__c.field-meta.xml
<CustomField>
    <fullName>Frete__c</fullName>
    <label>Frete (old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>