force-app/main/default/objects/WorkOrder/fields/Higieniza_o_Nao_Aplicavel__c.field-meta.xml
<CustomField>
    <fullName>Higieniza_o_Nao_Aplicavel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Higienização Não Aplicável</label>
    <type>Checkbox</type>
</CustomField>