force-app/main/default/objects/WorkOrder/fields/Hora_Instala_o__c.field-meta.xml
<CustomField>
    <fullName>Hora_Instala_o__c</fullName>
    <formula>(IF(OR(ISBLANK(Data_e_Hora_da_Instala_o_T__c), ISBLANK(Data_e_Hora_da_Instala_o_I__c)), 0, (Data_e_Hora_da_Instala_o_T__c - Data_e_Hora_da_Instala_o_I__c))+ 
IF(OR(ISBLANK(Data_Hora_da_Instala_o_Pt2_T__c	), ISBLANK(Data_Hora_da_Instala_o_Pt2_I__c)), 0, (Data_Hora_da_Instala_o_Pt2_T__c	- Data_Hora_da_Instala_o_Pt2_I__c))+ 
IF(OR(ISBLANK(Data_Hora_da_Instala_o_Pt3_T__c), ISBLANK(Data_Hora_da_Instala_o_Pt3_I__c)), 0, (Data_Hora_da_Instala_o_Pt3_T__c - Data_Hora_da_Instala_o_Pt3_I__c)))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Instalação</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>