force-app/main/default/objects/WorkOrder/fields/Hora_Run_in__c.field-meta.xml
<CustomField>
    <fullName>Hora_Run_in__c</fullName>
    <formula>(IF(OR(ISBLANK(Data_e_Hora_do_Runin_T__c), ISBLANK(Data_e_Hora_do_Runin_I__c)), 0, (Data_e_Hora_do_Runin_T__c - Data_e_Hora_do_Runin_I__c))+ 
IF(OR(ISBLANK(Data_e_Hora_do_2_Runin_T__c), ISBLANK(Data_e_Hora_do_2_Runin_I__c)), 0, (Data_e_Hora_do_2_Runin_T__c - Data_e_Hora_do_2_Runin_I__c)))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas Run-in</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>